[package]
name = "softbuffer_quickstart"
description = "minifb-like interface for softbuffer"
repository = "https://github.com/pastthepixels/softbuffer-quickstart"
version = "0.2.0"
license = "GPL-3.0"
keywords = ["graphics"]
categories = ["graphics", "multimedia", "rendering"]
edition = "2021"

[dependencies]
softbuffer = "0.4.5"
winit = "0.30.4"
